--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -154,6 +154,15 @@
 }
 
 
+@online{claimsBasedAuth,
+ author = {Bustamante, Michele Leroux},
+ year = {2006},
+ title = {Fundamentals of WCF Security: Claims-Based Identity Model},
+ url = {https://www.codemag.com/article/0611051},
+ urldate = {2018-08-07}
+}
+
+
 @online{clsidPackageJson,
  author = {Morawietz, Jan},
  year = {2018},
@@ -217,6 +226,15 @@
  urldate = {2017-03-01},
  number = {2},
  series = {Developer's Guide to Dependency Injection Using Unity}
+}
+
+
+@online{ecdsa,
+ author = {{Maxim Integrated Products Inc.}},
+ year = {2014},
+ title = {The Fundamentals of an ECDSA Authentication System},
+ url = {https://www.maximintegrated.com/en/app-notes/index.mvp/id/5767},
+ urldate = {2018-08-07}
 }
 
 
@@ -348,6 +366,24 @@
 }
 
 
+@online{hmac,
+ author = {Stallings, William},
+ year = {1999},
+ title = {The HMAC Algorithm},
+ url = {http://www.drdobbs.com/security/the-hmac-algorithm/184410908},
+ urldate = {2018-08-07}
+}
+
+
+@online{identityServer,
+ author = {IdentityServer},
+ year = {2018},
+ title = {Identity Server: The Identity and Access Control solution that works for you},
+ url = {https://identityserver.io/},
+ urldate = {2018-08-07}
+}
+
+
 @online{inter,
  author = {Practices, Microsoft Patterns {\&}.},
  year = {04.2013},
@@ -402,6 +438,24 @@
  title = {JavaScript Websocket API},
  url = {https://developer.mozilla.org/en-US/docs/Web/API/WebSocket},
  urldate = {2018-07-18}
+}
+
+
+@online{jwt,
+ author = {{Auth0 Inc.}},
+ year = {2018},
+ title = {Introduction to JSON Web Tokens},
+ url = {https://jwt.io/introduction/},
+ urldate = {2018-08-07}
+}
+
+
+@online{jwtTokenAuth,
+ author = {Barbettini, Nate},
+ year = {2016},
+ title = {ASP.NET Core Token Authentication Guide},
+ url = {https://stormpath.com/blog/token-authentication-asp-net-core},
+ urldate = {2018-08-07}
 }
 
 
@@ -460,12 +514,30 @@
 }
 
 
+@online{mvcModelBinding,
+ author = {Microsoft},
+ year = {2018},
+ title = {Model Binding in ASP.NET Core},
+ url = {https://docs.microsoft.com/en-us/aspnet/core/mvc/models/model-binding?view=aspnetcore-2.1},
+ urldate = {2018-08-07}
+}
+
+
 @online{mvcOverview,
  author = {Microsoft},
  year = {2018},
  title = {Overview of ASP.NET Core MVC},
  url = {https://docs.microsoft.com/en-us/aspnet/core/mvc/overview},
  urldate = {2018-08-06}
+}
+
+
+@online{mvcRouting,
+ author = {Microsoft},
+ year = {2017},
+ title = {Routing to controller actions in ASP.NET Core},
+ url = {https://docs.microsoft.com/en-us/aspnet/core/mvc/controllers/routing?view=aspnetcore-2.1},
+ urldate = {2018-08-07}
 }
 
 
@@ -520,6 +592,24 @@
  title = {Node.js os Documentation},
  url = {https://nodejs.org/api/os.html},
  urldate = {2018-07-24}
+}
+
+
+@online{oauth2,
+ author = {Parecki, Aaron},
+ year = {2018},
+ title = {OAuth 2.0},
+ url = {https://oauth.net/2/},
+ urldate = {2018-08-07}
+}
+
+
+@online{openID,
+ author = {OpenID},
+ year = {2018},
+ title = {Welcome to OpenID Connect},
+ url = {http://openid.net/connect/},
+ urldate = {2018-08-07}
 }
 
 
