--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -5,6 +5,10 @@
 % ------------------------------------------------------------------------------
 %\entry{Computer}{is a programmable machine that receives input, stores and manipulates data, and provides output in a useful format}
 
+\newacronym{utc}{UTC}{Universal Time Coordinated}
+\newacronym{ecdsa}{ECDSA}{Elliptic Curve Digital Signature Algorithm}
+\newacronym{rsa}{RSA}{Rivest-Shamir-Adleman}
+\newacronym{hmac}{HMAC}{keyed-Hashing for Message Authentication}
 \newacronym{iis}{IIS}{Internet Information Services}
 \newacronym{gui}{GUI}{Graphical User Interface}
 \newacronym{ide}{IDE}{Integrated Development Environments}
