proofread till claims based auth

--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -384,6 +384,14 @@
 }
 
 
+@online{identityStorageProviders,
+ author = {Microsoft},
+ year = {2017},
+ title = {Custom storage providers for ASP.NET Core Identity},
+ url = {https://docs.microsoft.com/en-us/aspnet/core/security/authentication/identity-custom-storage-providers?view=aspnetcore-2.1}
+}
+
+
 @online{inter,
  author = {Practices, Microsoft Patterns {\&}.},
  year = {04.2013},
