--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -190,15 +190,6 @@
 }
 
 
-@online{conventions,
- author = {Tutorials, Entity Framework},
- title = {Code First Conventions},
- url = {http://www.entityframeworktutorial.net/code-first/code-first-conventions.aspx},
- address = {http://www.entityframeworktutorial.net},
- urldate = {2018-01-26}
-}
-
-
 @online{dataAnnotations,
  author = {Tutorials, Entity Framework},
  title = {DataAnnotations in Code-First},
@@ -244,6 +235,33 @@
  url = {http://www.entityframeworktutorial.net/entityframework6/async-query-and-save.aspx},
  address = {http://www.entityframeworktutorial.net},
  urldate = {2017-02-24}
+}
+
+
+@online{efConventions,
+ author = {EntityFrameworkTutorial.net},
+ year = {2018},
+ title = {Conventions in Entity Framework Core},
+ url = {http://www.entityframeworktutorial.net/efcore/conventions-in-ef-core.aspx},
+ urldate = {2018-08-09}
+}
+
+
+@online{efCore,
+ author = {Microsoft},
+ year = {2016},
+ title = {Entity Framework Core},
+ url = {https://docs.microsoft.com/en-us/ef/core/},
+ urldate = {2018-08-09}
+}
+
+
+@online{efCreateModel,
+ author = {Microsoft},
+ year = {2016},
+ title = {Creating a Model},
+ url = {https://docs.microsoft.com/en-us/ef/core/modeling/index},
+ urldate = {2018-08-09}
 }
 
 
@@ -685,12 +703,39 @@
 }
 
 
+@online{sqlite,
+ author = {SQLite},
+ year = {2018},
+ title = {SQLite},
+ url = {https://www.sqlite.org/index.html},
+ urldate = {2018-08-09}
+}
+
+
+@online{sqliteLimitations,
+ author = {Microsoft},
+ year = {2017},
+ title = {SQLite EF Core Database Provider Limitations},
+ url = {https://docs.microsoft.com/en-us/ef/core/providers/sqlite/limitations},
+ urldate = {2018-08-09}
+}
+
+
 @online{staticFiles,
  author = {Anderson, Rick},
  year = {14.10.2016},
  title = {Introduction to working with static files in ASP.NET Core},
  url = {https://docs.microsoft.com/en-us/aspnet/core/fundamentals/static-files},
  urldate = {2017-03-09}
+}
+
+
+@online{swagger,
+ author = {{SmartBear Software}},
+ year = {2018},
+ title = {Swagger: The Best APIs are Built with Swagger Tools},
+ url = {https://swagger.io/},
+ urldate = {2018-08-09}
 }
 
 
