--- a/Report/setting/glossary.tex
+++ b/Report/setting/glossary.tex
@@ -5,6 +5,7 @@
 % ------------------------------------------------------------------------------
 %\entry{Computer}{is a programmable machine that receives input, stores and manipulates data, and provides output in a useful format}
 
+\newacronym{er}{ER Diagram}{Entity Relationship Diagram}
 \newacronym{utc}{UTC}{Universal Time Coordinated}
 \newacronym{ecdsa}{ECDSA}{Elliptic Curve Digital Signature Algorithm}
 \newacronym{rsa}{RSA}{Rivest-Shamir-Adleman}
