--- a/Report/res/bib/citavi.bib
+++ b/Report/res/bib/citavi.bib
@@ -266,11 +266,11 @@
 
 
 @online{efMigrations,
- author = {Lambson, Brice and Vega, Diego and Villers, Julien},
+ author = {Microsoft},
  year = {2017},
- title = {Migrations},
+ title = {Entity Framework CoreMigrations},
  url = {https://docs.microsoft.com/en-us/ef/core/managing-schemas/migrations/},
- urldate = {2018-01-26}
+ urldate = {2018-08-13}
 }
 
 
