--- a/Report/setting/codestyle.tex
+++ b/Report/setting/codestyle.tex
@@ -63,7 +63,7 @@
 	morekeywords={ var, async, await, partial, get, set }, % keywords
 	basicstyle=\ttfamily \color{black} \small \smaller,
 	emphstyle={\color{vs_class}},
-	emph={ IApplicationBuilder, IHostingEnvironment,ILoggerFactory, CookieAuthenticationOptions,IAuthenticationManager, BasicAuthenticationManager, HttpStatusCode,File,Path,IOptions,SpaOptions,Task,ChannelFactory,IDataService, Console, ServiceEndpoint, UnityServiceHost, NotificationService, IAuthorizationPolicy, ToolAuthorizationPolicy, ReadOnlyCollection, ToolUsernamePasswordValidator, UserNamePasswordValidationMode, OperationContract, EntityDataIdentifier, Lock, INotificationCallback, ServiceContract, SessionMode, INotificationInbound, NotificationCallbackContext, InstanceContext, HdsClaimsIdentityDTO, Pkg_Network, Pkg_Network_Header, PacketAssembler, PacketStructure, Rsa_Worker, BitConverter, BinaryFormatter, MemoryStream, List, Buffer, NullReferenceException, EventHandler, IpEndPointEventArgs, ErrorEventArgs, NetPacketInEventArgs, IPEndPoint, ConnectionState, INetCon, IDisposable, DateTime, ILock, Employee, UserClaim, Index, StringLength, Required, Application, Settings, ResourceDictionary, Uri, UriKind, ResourceManager, IValueConverter, IModuleCatalog, DirectoryModuleCatalog, SplashScreenModule, NetworkModule, Directory, ModuleNames, RelayCommand, Func, Action, ArgumentNullException, Cmd_Base, InterfaceDataTemplateSelector, DataTemplateSelector, DataTemplate, DependencyObject, IDataTemplateSelectable, FrameworkElement, DataTemplateKey, Type, INotifyPropertyChanged, INotifyDataErrorInfo, IBaseViewModel, NotMapped, LockStates, EntityBase, IValidatableObject, MaintenenceAmount, DbMigration, IServiceProvider, IServiceCollection, IConfiguration, ContainerBuilder, AutofacServiceProvider, IWebHost, WebHost, WebSocketOptions, DataContext, Configuration, Startup, AuthorizationPolicyBuilder, AuthorizeFilter, HttpPost, FromBody, FromQuery, PlayerCommand, SymmetricSecurityKey, TokenValidationParameters, Encoding, TimeSpan, JwtBearerDefaults, JwtTokenOptions, SigningCredentials, SecurityAlgorithms, AuthToken, ClaimsIdentity, JwtRegisteredClaimNames, ClaimValueTypes, JwtSecurityToken, Guid, AuthToken, JwtSecurityTokenHandler, Claim, InvalidRestOperationException, HttpContext, JsonConvert, ExceptionDTO, Song, Key, ForeignKey, Album, SongSource, EntityTypeBuilder}, % classnames
+	emph={ IApplicationBuilder, IHostingEnvironment,ILoggerFactory, CookieAuthenticationOptions,IAuthenticationManager, BasicAuthenticationManager, HttpStatusCode,File,Path,IOptions,SpaOptions,Task,ChannelFactory,IDataService, Console, ServiceEndpoint, UnityServiceHost, NotificationService, IAuthorizationPolicy, ToolAuthorizationPolicy, ReadOnlyCollection, ToolUsernamePasswordValidator, UserNamePasswordValidationMode, OperationContract, EntityDataIdentifier, Lock, INotificationCallback, ServiceContract, SessionMode, INotificationInbound, NotificationCallbackContext, InstanceContext, HdsClaimsIdentityDTO, Pkg_Network, Pkg_Network_Header, PacketAssembler, PacketStructure, Rsa_Worker, BitConverter, BinaryFormatter, MemoryStream, List, Buffer, NullReferenceException, EventHandler, IpEndPointEventArgs, ErrorEventArgs, NetPacketInEventArgs, IPEndPoint, ConnectionState, INetCon, IDisposable, DateTime, ILock, Employee, UserClaim, Index, StringLength, Required, Application, Settings, ResourceDictionary, Uri, UriKind, ResourceManager, IValueConverter, IModuleCatalog, DirectoryModuleCatalog, SplashScreenModule, NetworkModule, Directory, ModuleNames, RelayCommand, Func, Action, ArgumentNullException, Cmd_Base, InterfaceDataTemplateSelector, DataTemplateSelector, DataTemplate, DependencyObject, IDataTemplateSelectable, FrameworkElement, DataTemplateKey, Type, INotifyPropertyChanged, INotifyDataErrorInfo, IBaseViewModel, NotMapped, LockStates, EntityBase, IValidatableObject, MaintenenceAmount, DbMigration, IServiceProvider, IServiceCollection, IConfiguration, ContainerBuilder, AutofacServiceProvider, IWebHost, WebHost, WebSocketOptions, DataContext, Configuration, Startup, AuthorizationPolicyBuilder, AuthorizeFilter, HttpPost, FromBody, FromQuery, PlayerCommand, SymmetricSecurityKey, TokenValidationParameters, Encoding, TimeSpan, JwtBearerDefaults, JwtTokenOptions, SigningCredentials, SecurityAlgorithms, AuthToken, ClaimsIdentity, JwtRegisteredClaimNames, ClaimValueTypes, JwtSecurityToken, Guid, AuthToken, JwtSecurityTokenHandler, Claim, InvalidRestOperationException, HttpContext, JsonConvert, ExceptionDTO, Song, Key, ForeignKey, Album, SongSource, EntityTypeBuilder, Initial, Migration, MigrationBuilder, ReferentialAction}, % classnames
 	showspaces=false,
 	showtabs=false,
 	breaklines=true,
